--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Masterdots Game</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
+    <header>
+        <img src="img/logo.png" alt="Logo Masterdots">
+    </header>
+    <main>
+        <form action="#">
+            <div class="itemform">
+                <label for="nick">Introduce tu nick</label>
+                <input type="text" name="nick" id="nick">
+            </div>
+            <div class="itemform">
+                <label for="tamano">Tamaño del juego</label>
+                <select name="tamano" id="tamano">
+                    <option value="">--Por favor elige un tamaño--</option>
+                    <option value="1">4x4</option>
+                    <option value="2">5x5</option>
+                    <option value="3">6x6</option>
+                </select>
+            </div>
+            <div class="itemform">
+                <input type="submit" value="JUGAR">
+            </div>
+        </form>
+    </main>
+    <footer>
+        <p>Curso FrontEnd HTML, CSS y JS </p>
+    </footer>
     
 </body>
 </html>
