--- a/index.html
+++ b/index.html
@@ -4,41 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Masterdots game</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Masterdots Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
+    <!-- CABECERA -->
     <header>
-        <img src="img/logo.png" alt="Logo Masterdots">
+        <img src="./img/logo.png" alt="Logo MasterDots">
     </header>
+    <!-- FORMULARIO USUARIO -->
     <main>
-        <form action="#">
+        <div>
+            <p id="error"></p>
+        </div>
+        <form action="juego.html" id="formEntrada">
             <div class="itemform">
-                <label for="nick">Introduce tu nick</label>
+                <label for="nick">introduce tu nick</label>
                 <input type="text" name="nick" value="@" id="nicka" readonly>
                 <input type="text" name="nick" id="nick">
             </div>
             <div class="itemform">
-                <label for="tamano">Tamaño del juego</label>
+                <label for="email">correo electrónico</label>
+                <input type="email" id="email" value="yo@iam.es">
+            </div>
+            <div class="itemform">
+                <label for="tamano">tamaño del juego</label>
                 <select name="tamano" id="tamano">
-                    <option value="">--Por favor elige un tamaño--</option>
+                    <option value="0">--Por favor elige un tamaño--</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
                 </select>
             </div>
             <div class="itemform">
-                <input type="submit" value="JUGAR">
+                <input type="submit" value="JUGAR" id="jugar">
             </div>
         </form>
     </main>
+    <!-- PIE DE PAGINA -->
     <footer>
-        <p>Curso FrontEnd HTML, CSS y JS </p>
+        <p>Curso FrontEnd HTML, CSS y JS</p>
     </footer>
-    
+    <!-- EL CODIGO JS-->
+    <script src="./js/app.js"></script>
 </body>
 </html>
